--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
+# Ignore .obsidian
 .obsidian/
+
+!.obsidian/app.json
+!.obsidian/appearance.json
+!.obsidian/community-plugins.json
+!.obsidian/core-plugins.json
+!.obsidian/types.json
+!.obsidian/themes/
+!.obsidian/themes/**
+
